# codewhale-gui

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: autoloop-active.json
docs/superpowers/plans/: 2026-07-06-codewhale-gui-macos-mvp.md
docs/superpowers/specs/: 2026-07-06-codewhale-gui-design.md
scripts/: fetch-sidecar-windows.sh  fetch-sidecar.sh  make-latest-json.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: codewhale-tui
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs  update.rs  vision_config.rs  vision_shim.rs
src-tauri/windows/: hooks.nsh
src/components/: ApprovalModal.tsx  ArtifactList.tsx  ConversationView.tsx  CrashScreen.tsx  Icons.tsx  ItemView.tsx  MainScreen.tsx  SettingsModal.tsx  ThreadList.tsx  Wizard.tsx
src/lib/: api.test.ts  api.ts  artifacts.test.ts  artifacts.ts  events.test.ts  events.ts  itemPresentation.test.ts  itemPresentation.ts  version.test.ts  version.ts
src/state/: threadReducer.test.ts  threadReducer.ts
