[package]
name = "codewhale-gui"
version = "0.1.13"
description = "CodeWhale desktop workbench"
authors = ["melodylu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codewhale_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
axum = "0.7"
toml_edit = "0.22"

